<resources>
    <string name="app_name">Museum for all</string>

    <string name="welcome">Welcome</string>
  <!--  <string name="changeLang">Change Language</string> -->
    <string name="العربية">العربية</string>
    <string name="Francais">Français</string>
    <string name="English">English</string>

    <string name="voyant">Seeing</string>
    <string name="Nvoyant">Blind</string>
    <string name="bardo">Bardo museum</string>
    <string name="sousse">Sousse museum</string>
    <string name="bardoTitle">Bardo museum</string>

    <string name="statut">STATUT1</string>
    <string name="statutt">STATUT2</string>
    <string name="statuttt">STATUT3</string>
    <string name="zero">0</string>

</resources>
