<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
       tools:context=".Bardo">

    <TextView
        android:id="@+id/bardoTitle"
        android:layout_width="363dp"
        android:layout_height="59dp"
        android:gravity="center"

        android:text="@string/bardoTitle"
        android:textColor="#03A9F4"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="50dp" />

    <Button
        android:id="@+id/statut"
        android:layout_width="144dp"
        android:layout_height="82dp"
        android:text="@string/statut"
        android:textSize="24sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/statut2"
        android:layout_width="144dp"
        android:layout_height="82dp"
        android:text="@string/statutt"
        android:textSize="24sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/statut3"
        android:layout_width="144dp"
        android:layout_height="82dp"
        android:text="@string/statuttt"
        android:textSize="24sp"
        tools:ignore="MissingConstraints" />
</LinearLayout>